# car-price-prediction

./: .gitignore  README.md  bundle.js  bundle.js.LICENSE.txt  bundle.js.map  index.html  package-lock.json  package.json  pyproject.toml  webpack.config.js
src/: App.js
src/nodejs/: App.jsx  Panels.jsx  app.css  index.jsx
src/nodejs/ExplorationComponents/: ScatterPlot.jsx  Widgets.jsx
src/nodejs/PredictionComponents/: AdditiveForceVisualizer.jsx  Widgets.jsx
src/python/: app.py  explain.py  neural_net.py  neural_net_classifier
