[tool.poetry]
name = "car-price-prediction"
version = "0.1.0"
description = ""
authors = ["François <francois.culiere@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
